force-app/main/default/objects/Casa__c/Casa__c.object-meta.xml
<CustomObject>
    <description>objeto casa para informar todas as casas da imobiliaria</description>
    <label>Casa</label>
    <nameField>
        <displayFormat>C{0000}</displayFormat>
        <label>Nome de Casa</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Casas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>