force-app/main/default/objects/Casa__c/fields/Endereco__c.field-meta.xml
<CustomField>
    <fullName>Endereco__c</fullName>
    <description>Endereço das casas</description>
    <inlineHelpText>Informe o endereço da casa</inlineHelpText>
    <label>Endereco</label>
    <length>255</length>
    <type>Text</type>
</CustomField>