force-app/main/default/objects/Casa__c/fields/Mobiliado__c.field-meta.xml
<CustomField>
    <fullName>Mobiliado__c</fullName>
    <description>Existe moveis no imovel</description>
    <inlineHelpText>Selecionar se existe moveis no imovel</inlineHelpText>
    <label>Mobiliado</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>