force-app/main/default/objects/Casa__c/fields/Qtd_Quartos__c.field-meta.xml
<CustomField>
    <fullName>Qtd_Quartos__c</fullName>
    <description>Informe a quantidade de quartos da casa</description>
    <inlineHelpText>Informe a quantidade de quartos</inlineHelpText>
    <label>Quantidade de Quartos</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>